# shellworks

./: .gitignore  README.md  env.example  main.py  pyproject.toml
configs/endpoints/: local_orin.toml  local_primary.toml  local_thor.toml
configs/model_profiles/: nemotron3_nano.toml  nemotron3_super.toml  qwen3.5_4b_gguf.toml  qwen3_4b_gguf.toml  qwen3_8b_fp8.toml
lessons/lesson_1_tool_calling_from_first_principles/: README.md  lesson_1_1_design_doc_llm_endpoints_and_model_profiles.md  lesson_1_5_notes.md  lesson_1_5_recovery.py  lesson_1_6_local_security.md  lesson_notes.md  lesson_notes_indepth.md  minimal_tool_calling_addendum.md  minimal_tool_calling_implementation_note_shellworks.md  minimal_tool_calling_sdd.md
scripts/: README.md  build_llama.cpp.sh  llama_server.sh  llama_server_qwen3.5-4b.sh  nemotron3-super-thor.sh  nemotron3-thor.sh  qwen3-thor.sh
src/shellworks/: __main__.py  app.py  main.py
src/shellworks/llm/: endpoint.py  model_profile.py  provider.py  vllm_client.py
src/shellworks/orchestrator/: minimal_tool_calling.py  validation.py
src/shellworks/state/: runtime.py
src/shellworks/tools/: arithmetic.py
tests/: test_config_loaders.py  test_minimal_tool_calling.py  test_validation.py
